$Id: History,v 1.11 2001-01-24 14:54:51 urban Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Jan     16, 01 V.Ivanchenko - materials-V03-00-01
               IonisParamElm.cc : excitation potential is tabulated
               according ICRU Report #37.
	       
Jan     16, 01 L.Urban  - materials-V03-00-00
               bug fixed in IonisParamMat.cc : E100eV instead of E100keV
               This bug affected the values of the density correction
               parameters in the energy loss (dE/dx) computation,
               its effect was quite big (~ 3-5 % error in dE/dx
               in the energy range 1 MeV - 50 MeV !!!)
	       
Nov     09, 00 V.Grichine - materials-V02-00-01
               included test/ directory which was not tagged.

August  04, 00 V.Grichine - materials-V02-00-00
               G4SandiaTable.cc: fixed initialization of pointers in
	       constructor and corrected deletion of fPhotoAbsorptionCof
	       in destructor.

June    15, 00 G.Cosmo  - materials-V01-01-00
               fixed usage of pow(double,double) in G4SandiaTable.
     
March   03, 00 M.Maire  - materials-V01-00-00
               const char* everywhere in G4MaterialPropertiesTable
	       