@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.1 1999-01-08 16:32:10 gunter Exp $
+# $Id: GNUmakefile,v 1.2 2001-01-28 16:58:59 maire Exp $
 # ----------------------------------------------------------------
 # Makes test program in environment variable G4TARGET.
 # ----------------------------------------------------------------
@@ -15,23 +15,5 @@ G4EXEC_BUILD = true
 
 include $(G4INSTALL)/config/architecture.gmk
 
-# Override some variables for binmake.gmk.
-#
-INCFLAGS := -I$(G4BASE)/global/management/include \
-            -I$(G4BASE)/global/HEPRandom/include \
-            -I$(G4BASE)/global/HEPGeometry/include \
-            -I$(G4BASE)/track/include \
-            -I$(G4BASE)/processes/management/include \
-            -I$(G4BASE)/particles/management/include \
-            -I$(G4BASE)/materials/include
-
-LDLIBS   := \
-            -lG4materials \
-            -lG4processes \
-            -lG4track \
-            -lG4particles \
-            -lG4intercoms \
-            -lG4global \
-            -lG4intercoms
 
 include $(G4INSTALL)/config/binmake.gmk
