@@ -1,4 +1,4 @@
-$Id: History,v 1.11 2001-01-24 14:54:51 urban Exp $
+$Id: History,v 1.12 2001-01-28 16:58:57 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,6 +17,9 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+28-01-01  M.Maire - materials-V03-00-02
+          new method G4Material::GetNuclearInterLength()
+	  
 Jan     16, 01 V.Ivanchenko - materials-V03-00-01
                IonisParamElm.cc : excitation potential is tabulated
                according ICRU Report #37.
